[package]
name = "dungeon-crawler-server"
version = "0.1.0"
authors = ["eta077 <eta077@yahoo.com>"]
edition = "2018"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.1"
log = "0.4"
serde = "1"
serde_derive = "1"
simple_logger = "1"
dungeon-crawler-model = { path = "./dungeon-crawler-model" }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
